Issue #1879798 by echoz: number input at 100% width drops suffix below on narrow screens.

--- a/core/themes/seven/style.css
+++ b/core/themes/seven/style.css
@@ -771,6 +771,9 @@ select.form-select:focus {
       box-sizing: border-box;
       width: 100%;
   }
+  input.form-number {
+    width: auto;
+  }
   input.form-autocomplete,
   input.form-text,
   input.form-tel,
